--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Bokning & Schema Online</title>
+	<meta charset="utf-8">
+	<meta name="keywords" content="Bokningssystem, Bokningsprogram för städföretag , schema Bokning, Tidsbokning Program, Bokning & Schema Online , Målning Affärs programvara, Målning Schema Program, Schema och Bokning, Schemaboknings System, Schema Management Software, ERP för Byggföretag, Byggföretag Bokning Software, Städning ERP, Tidsbokning program, Bokning  och schemaläggningsprogram, ERP för städföretag, Schemaläggning program, Städning Bokning, Bokning och Schema">
+	<meta name="description" content="Bokning och Schema Online – Ett bokning och schemaläggningsytem för tjänsteföretag.">
+	<title>Bokning & Schema Online - Schema Bokning | Bokningsprogram | Affärssystem för tjänsteföretag</title>
 </head>
 <body>
-
+<script src=""></script>
 </body>
 </html>
