--- a/index.html
+++ b/index.html
@@ -1,77 +1,168 @@
 <!DOCTYPE html>
 <html>
-<head>
-<<<<<<< HEAD
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-<link rel="stylesheet" href="bos.css">
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-<meta charset="utf-8">
-<meta name="keywords" content="Bokningssystem, Bokningsprogram för städföretag , schema Bokning, Tidsbokning Program, Bokning & Schema Online , Målning Affärs programvara, Målning Schema Program, Schema och Bokning, Schemaboknings System, Schema Management Software, ERP för Byggföretag, Byggföretag Bokning Software, Städning ERP, Tidsbokning program, Bokning  och schemaläggningsprogram, ERP för städföretag, Schemaläggning program, Städning Bokning, Bokning och Schema">
-<meta name="description" content="Bokning och Schema Online – Ett bokning och schemaläggningsytem för tjänsteföretag.">
-<title>Bokning & Schema Online - Schema Bokning | Bokningsprogram | Affärssystem för tjänsteföretag</title>
-</head>
-<body>
-  <!-- <nav>
-<div class="container-fluid">
-   <div class="row" style="border: 1px solid red;" id="navbar">
-    <div class="col-lg-4" style="border: 1px solid red;">
-      Logo
-    </div>
-    <div class="col-lg-8" class="collapse navbar-collapse">
-    <ul class="nav justify-content-end">
-  <li class="nav-item">
-    <a class="nav-link active" href="#!">Varför BOS</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#!">Pris</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#!">Om oss</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#!">Logga in</a>
-  </li>
-</ul>
-    </div> -->
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link" href="#!">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#!">Disabled</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="#!">Navbar</a>
-
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-    <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-      <li class="nav-item active">
-        <a class="nav-link" href="#!">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#!">Link</a>
-      </li>
-    </ul>
-  </div>
-</nav> -->
-
-
-<script src=""></script>
-
-</body>
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <!---------------font-awesome website link-liberary--------->
+      <link rel="stylesheet" type="text/css" href="css/style.css">
+       <script src="js/js1.js"></script>
+      <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+   </head>
+   <body>
+      <!-------------------------------starts-heder--------------------------->    
+      <div id="myNav" class="overlay">
+         <a href="javascript:void(0)" class="closebtn" id="clsbtn" onclick="closeNav()">&times;</a>
+         <div class="overlay-content">
+            <a href="#home">Home</a>
+            <a href="whyoss.html">Why Oss?</a>
+            <a href="price.html">Price</a>
+            <a href="about_us.html">About Us</a>
+         </div>
+      </div>
+      <!---------------------------------menubar---------------------------------->
+      <div class="container-fluid" id="head-container">
+         <nav class="navbar navbar navbar-default my_menu" data-spy="affix" data-offset-top="197">
+            <div class="container-fluid">
+               <div class="navbar-header">
+                  <span  class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                  <span class="pull" style="font-size:24px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+                  </span>
+                  <a class="navbar-brand" href="#"><img src="images/Bokning%20&%20Schema%20Online.png" class="logo img-responsive" /></a>
+               </div>
+               <div class="collapse navbar-collapse" id="myNavbar">
+                  <ul class="nav navbar-nav pull-right">
+                     <li class="active"><a href="#home" >Home</a></li>
+                     <li><a href="whyoss.html">Why Oss?</a></li>
+                     <li><a href="price.html">Price</a></li>
+                     <li><a href="about_us.html">About Us</a></li>
+                  </ul>
+               </div>
+            </div>
+         </nav>
+      </div>
+      <!---------------------------------end-of-menubar----------------------- -->    
+      <div class="container-fluid" id="addr-index">
+         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <h1 class="headindex">Allt på samma plattform</h1>
+         </div>
+         <div class="contact">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+               <img src="images/index.png" class="headimg1 img-responsive" alt="index image">
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+               <h3 class="txt1">När ni växar och behöver ett stablit program för att organisera. Boka ett uppdrag, skapa fakturaunderlag, ha koll på era anställda när du stämplar in och ut via Geo location. Enkelt och RUT/ROT anpassat.</h3>
+               <div id="form-main1">
+                  <div id="form-div1">
+                     <h2 class="trail-txt">Testa 14 dagar gratis!</h2>
+                     <form class="montform1" id="reused_form" >
+                        <div class="col-sm-6 col-md-6 col-lg-6">
+                           <p class="email">
+                              <input name="email" type="email" required class="feedback-input" id="email1" placeholder="E-post adress" />
+                           </p>
+                           <p class="formtxt">Beﬁntlig kund?<a href="#">&nbsp; Lagga in här</a></p>
+                        </div>
+                        <div class="col-sm-6 col-md-6 col-lg-6">
+                           <div class="submit">
+                              <button type="submit" class="button-sub">Starta</button>
+                           </div>
+                        </div>
+                     </form>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <br/><br/>
+      <div class="container-fluid content">
+         <div class="row">
+            <h1 class="headlogos">Några av våra nöjda kunder</h1>
+            <hr class="headlogoshr" />
+            <div class="col-md-4 col-lg-4">
+              <img src="images/wasastad.png" class="img-responsive" alt="Wasa Städ">
+            </div>
+            <div class="col-md-4 col-lg-4">
+              <img src="images/kvalitetverk.png" class="img-responsive" alt="Kvalitet verk">
+            </div>
+            <div class="col-md-4 col-lg-4">
+              <img src="images/rutstad2.png" class="img-responsive" alt="Rut Städ">
+            </div>
+         </div>
+      </div>
+      <!----------------------------------varfor BOS?----------------------------------------- -->
+      <div class="container-fluid varfor_bg">
+         <div class="text-center" id="varfor">
+            <h1 class="headlogos">Varfor BOS?</h1>
+            <hr class="headlogoshr" />
+            <p class="txt2">Taihke aidrig pé missa eh bokning ellerskapa<br/>
+               faktura underlag. Full koll pé hela schema varsom<br/>
+               heist och n;-arsom heist. Full koll pé hela schema<br/>
+               varsom heist och n;-arsom heist.
+            </p>
+         </div>
+         <div class="container">
+            <div class="row" id="BOS_logo">
+               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" id="visma1" >
+                  <img src="images/visma.png" class="img-responsive" id="visma">
+               </div>
+               <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6" id="fortnoxdiv">
+                  <img src="images/fortnox2.png" class="img-responsive" id="fortnox">
+               </div>
+            </div>
+         </div>
+         <div class="index_btn2 text-center">
+            <a href="whyoss.html"><button type="submit" class="whyoss_link" >Ta reda pé mer</button></a>
+         </div>
+      </div>
+      <!----------------------------------contact-section------------------------------------- -->
+      <div class="container-fluid">
+         <div class="row ">
+            <p class="contact-head text-center">Kan vi hjälpa dig att underlätta din vardag?</p>
+         </div>
+         <div class="row index-before-foot">
+            <div class="col-xs-12 col-sm-4 col-md-4">
+               <center>
+                  <i class="fa fa-mobile" id="icon-mob" aria-hidden="true">&nbsp; 08 21 22 58</i>
+               </center>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4">
+               <center><a href="about_us.html"><button type="submit" id="btnpos" class="btn mybtn-cont">Kontakta oss</button></a></center>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4">
+               <center>
+                  <i class="fa fa-envelope" id="icon-email" aria-hidden="true">&nbsp; info@bokningoschema.se</i>
+               </center>
+            </div>
+         </div>
+      </div>
+      <!--------------------------------footer-------------------------------------->    
+      <div class="container-fluid footer well">
+         <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+               <a href="#"><img src="images/Bokning%20&%20Schema%20Online.png" id="footlogo" class="img-responsive" alt="footerlogo"></a>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+               <center>
+                  <ul class="footul list-inline pull-center">
+                     <li><a href="#">Vanliga frågor</a></li>
+                     <li><a href="#">Funktioner</a></li>
+                     <li><a href="#">Jobba hos oss</a></li>
+                     <li><a href="about_us.html"><button type="submit" class="btn foot-btn">Kontakta oss</button></a></li>
+                  </ul>
+               </center>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+               <p class="rights-txt"> &#169; 2018 BokningoSchema Alla rättigheter förbehållna</p>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+            </div>
+         </div>
+      </div>
+      <!------------end of footer--------------->
+   </body>
 </html>
