add hamburger menu for smaller screens

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <!---------------font-awesome website link-liberary--------->
+      <!---------------font-awesome website link-liberary------- -->
       <link rel="stylesheet" type="text/css" href="css/style.css">
        <script src="js/js1.js"></script>
       <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
    </head>
    <body>
-      <!-------------------------------starts-heder--------------------------->    
+      <!-------------------------------starts-heder------------------------- -->    
       <div id="myNav" class="overlay">
          <a href="javascript:void(0)" class="closebtn" id="clsbtn" onclick="closeNav()">&times;</a>
          <div class="overlay-content">
@@ -29,7 +29,11 @@
             <div class="container-fluid">
                <div class="navbar-header">
                   <span  class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                  <span class="pull" style="font-size:24px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+                  <span class="pull" style="cursor:pointer" onclick="openNav()">
+                    <div class="hamburger"></div>
+                    <div class="hamburger"></div>
+                    <div class="hamburger"></div>
+                  </span>
                   </span>
                   <a class="navbar-brand" href="#"><img src="images/Bokning%20&%20Schema%20Online.png" class="logo img-responsive" /></a>
                </div>
